# viewdt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: index.html
viewdt/: __init__.py  core.py  datasets.py  options.py  profiler.py  template.py  widget.py
